--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,6 +1,6 @@
 torch
 torchvision
-scikit-image
-opencv-python
+scikit-image==0.19.3
+opencv-python==4.6.0.66
 pillow-heif
-mediapipe
+mediapipe==0.8.11
