--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,8 +1,6 @@
 torch
 torchvision
-scikit-image==0.19.3
-opencv-python==4.6.0.66
+scikit-image
+opencv-python
 pillow-heif
-mediapipe==0.8.11
-streamlit
-boto3
+mediapipe
