working version with sessions messed up, need to clear the session placements

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ venv
 /data_failed
 /code/results
 *.pyc
-/code/input/hand.jpg
+code/input/hand.jpg
 /code/input
 eng.mp3
 *.mp3
+nohup.out
+pages/nohup.out
+code/eng.mp3
+code/output_video.mp4
